# realmate-challenge

./: .gitignore  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/conversations/: detail.html  list.html
realmate_challenge/: settings.py  urls.py
